# vyuka-KI-GUI

./: README.md
api/: .env  .gitignore  Dockerfile  README.md  database.db  pyproject.toml
api/app/: annotations.py  config.py  create_mermaid.py  database.py  main.py  models.py
api/app/src/: routers.py
api/app/src/auth/: controllers.py  routes.py  utils.py
api/app/src/categories/: controllers.py  routers.py  schemas.py
api/app/src/courses/: controllers.py  routers.py  schemas.py
api/app/src/enrollments/: controllers.py  routers.py  schemas.py
api/app/src/roles/: controllers.py  routers.py  schemas.py
api/app/src/task_completions/: controllers.py  routers.py  schemas.py
api/app/src/tasks/: controllers.py  routers.py  schemas.py
api/app/src/users/: controllers.py  routers.py  schemas.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.tsx  main.tsx
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/apis/: AuthApi.ts  CategoriesApi.ts  CoursesApi.ts  EnrollmentsApi.ts  RolesApi.ts  TaskCompletionApi.ts  TasksApi.ts  UsersApi.ts  index.ts
frontend/src/api/models/: CategoryCreate.ts  CategoryResponse.ts  CategoryUpdate.ts  CourseCreate.ts  CourseResponse.ts  CourseUpdate.ts  EnrollmentCreate.ts  (+16 more)
frontend/src/components/: LoadingSpinner.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: index.ts  useApiClient.ts
frontend/src/pages/: DashboardPage.tsx  ErrorPages.tsx  TaskManagementPage.tsx
sdk/: tsconfig.json
(+18 files in other folders)
