[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "marek.tremel",email = "tremelmarek@gmail.com"},
    {name = "petr.kristen",email = "petrkristen8@gmail.com"},
    {name = "radek.novak",email = "novakkradekk@gmail.com"}
]
package-mode = false



readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "sqlalchemy-schemadisplay (>=2.0,<3.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "schemathesis (>=3.39.12,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "N",   # pep8-naming
    "PTH",  # use pathlib
]
preview = true
ignore = ["E501", "E712", "E711"]  # zbytecne to rve, co lze upravit formatter upravi

[tool.ruff.lint.pydocstyle]
convention = "google"
